# nheqminer-FASM-200_9

./: CLAUDE.md  CMakeLists.txt  FINAL_STATUS.md
blake2/: blake2.h
nheqminer/: AvailableSolvers.h  MinerFactory.cpp  MinerFactory.h  main.cpp
solver1927/: CMakeCache.txt  CMakeLists.txt  blake2b_hasher.cpp  blake2b_hasher.hpp  cmake_install.cmake  collision_detector.cpp  collision_detector.hpp  main.cpp  memory_pool.hpp  simd_detector.cpp  simd_detector.hpp  solver1927.cpp  solver1927.hpp  test
